<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/action_home"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_work"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="@string/action_work"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/action_fav"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_baseline_settings_24"
        android:title="@string/action_settings"
        app:showAsAction="always" />

</menu>