<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Settings, should always be in the overflow -->

    <item
        android:id="@+id/action_home"
        android:icon="@drawable/ic_baseline_home_24"
        android:title="@string/action_home"
        android:orderInCategory="2"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_work"
        android:icon="@drawable/ic_baseline_work_24"
        android:title="@string/action_work"
        android:orderInCategory="3"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_fav"
        android:icon="@drawable/ic_baseline_favorite_24"
        android:title="@string/action_fav"
        android:orderInCategory="4"
        app:showAsAction="always" />
    <item
        android:id="@+id/action_gps"
        android:icon="@drawable/ic_baseline_gps_fixed_24"
        android:title="@string/action_gps"
        android:orderInCategory="1"
        app:showAsAction="always" />


</menu>